Halfway done with project

--- a/airbnb/index.html
+++ b/airbnb/index.html
@@ -1,28 +1,40 @@
-<!-- Markup this content with HTML here -->
-[Page Title: Airbnb]
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Airbnb</title>
+    <link rel="stylesheet" href="styles.css"/>
+  </head>
+  <body>
+    <header>
+      <h1>Book unique homes and experiences.</h1>
+    </header>
 
+    <div class="container">
+      <h2>WHERE</h2>
+      <p>Anywhere</p>
 
-Book unique homes and experiences.
+      <div class="container2">
+        <h2>CHECK IN</h2>
+        <h2>CHECK OUT</h2>
+      </div>
 
+      <div class="container3"  
+        <p>mm/dd/yyyy</p>
+        <p>mm/dd/yyyy</p>
+      </div>
 
-Where
-[Text Input]
+      <h2>GUESTS</h2>
+      <p>1 guest</p>
 
-Check In
-[Date Input]
+      <div class="button"><a href="#">Search</a></div>
 
-Check Out
-[Date Input]
-
-Guests
-[Number Input]
-
-Search
-[Submit Input]
-
-
-Explore Airbnb
-Homes
-Experiences
-Restaurants
-
+      <h3>Explore Airbnb</h3>
+      <ul>
+        <li>Homes</li>
+        <li>Experiences</li>
+        <li>Restaurants</li>
+      </ul>
+    </div>
+  </body>
+</html>
