--- a/amazon/index.html
+++ b/amazon/index.html
@@ -1,6 +1,14 @@
-<!-- Markup this content with HTML here -->
-[Page Title: Amazon]
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Amazon</title>
+    <link href="styles.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    
+  </body>
+</html>
 
 Computer & Technology Books
 
@@ -32,4 +40,3 @@ Operating Systems
 
 [Image https://via.placeholder.com/125x175]
 Games & Strategy Guides
-
