--- a/instagram/index.html
+++ b/instagram/index.html
@@ -1,34 +1,44 @@
-<!-- Markup this content with HTML here -->
-[Page Title: Instagram]
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Instagram</title>
+    <link rel="stylesheet" href="styles.css"/>
+  </head>
+  <body>
+    <div class="list-container">
+      <h4>ABOUT</h4>
+        <ul>
+          <li><a href="#">Company</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">Jobs</a></li>
+        </ul>
+      <h4>LEGAL</h4>
+        <ul>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Platform</a></li>
+          <li><a href="#">Libraries</a></li>
+        </ul>
+    </div>
+    <div class="container">
+      <h1>About Us</h1>
 
+      <h2>The Team</h2>
 
-About
-  Company
-  Press
-  Jobs
-Legal
-  Terms
-  Privacy
-  Platform
-  Libraries
+      <h3>Kevin Systrom (CEO, co-founder)</h3>
 
+      <p><<strong>Kevin Systrom</strong> (<a class="at-links" href="#">@kevin</a>) is the CEO and co-founder of Instagram, a community of more than 1 billion who capture and share the world's moments on the service. He is responsible for the company's overall vision and strategy as well as day-to-day operations.</p>
 
-About Us
+      <p>Since the beginning, Kevin has focused on simplicity and inspiring creativity through solving problems with thoughtful product design. As a result, Instagram has become the home for visual storytelling for everyone from celebrities, newsrooms and brands, to teens, musicians and anyone with a creative passion.</p>
 
-The Team
+      <p>Prior to founding Instagram, Kevin was part of the startup Odeo, which later became Twitter, and spent two years at Google working on products like Gmail and Google Reader. He graduated from Stanford University with a BS in Management Science &amp; Engineering and serves on the boards of Walmart and KCRW.</p>
 
-Kevin Systrom (CEO, co-founder)
+      <h3>Mike Krieger (CTO, co-founder)</h3>
 
-Kevin Systrom (@kevin) is the CEO and co-founder of Instagram, a community of more than 1 billion who capture and share the world's moments on the service. He is responsible for the company's overall vision and strategy as well as day-to-day operations.
+      <p><strong>Mike Krieger</strong> (<a class="at-links" href="#">@mikeyk</a>) is the CTO and co-founder of Instagram, a global community of more than 1 billion. As the head of engineering, Mike focuses on building products that bring out the creativity in all of us.</p>
 
-Since the beginning, Kevin has focused on simplicity and inspiring creativity through solving problems with thoughtful product design. As a result, Instagram has become the home for visual storytelling for everyone from celebrities, newsrooms and brands, to teens, musicians and anyone with a creative passion.
-
-Prior to founding Instagram, Kevin was part of the startup Odeo, which later became Twitter, and spent two years at Google working on products like Gmail and Google Reader. He graduated from Stanford University with a BS in Management Science &amp; Engineering and serves on the boards of Walmart and KCRW.
-
-
-Mike Krieger (CTO, co-founder)
-
-Mike Krieger (@mikeyk) is the CTO and co-founder of Instagram, a global community of more than 1 billion. As the head of engineering, Mike focuses on building products that bring out the creativity in all of us.
-
-A native of São Paulo, Brazil, Mike holds an MS in Symbolic Systems from Stanford University. Prior to founding Instagram, he worked at Meebo as a user experience designer and front-end engineer.
-
+      <p>A native of São Paulo, Brazil, Mike holds an MS in Symbolic Systems from Stanford University. Prior to founding Instagram, he worked at Meebo as a user experience designer and front-end engineer.</p>
+    </div>
+  </body>
+</html>
