--- a/github/index.html
+++ b/github/index.html
@@ -1,25 +1,33 @@
-<!-- Markup this content with HTML here -->
-[Page Title: GitHub Careers]
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Github Careers</title>
+    <link rel="stylesheet" href="styles.css"/>
+  </head>
+  <body>
+    <header>
+      <h1>Come help us make collaboration even better</h1>
+      <p>At GitHub we build tools that make collaborating and writing software easier for everyone. We've built a company we truly love working for, and we think you will too.</p>
+    </header>
 
+    <p class="click">
+      <a href="#">Open positions</a>
+      <a href="#">Apprenticeships</a>
+      <a href="#">Internships</a>
+    </p>
 
-Come help us make collaboration even better
+    <div class="container-both">
+      <div class="container1">
+        <img src="https://via.placeholder.com/100" alt="Picture of three hands doing the peace sign, thumbs up, and pointing.">
+        <h2>A diverse and inclusive workplace</h2>
+        <p>At GitHub, we think that a diverse company is a strong company, and we work hard to foster a supportive and welcoming workplace. Learn more about our commitment to diversity and inclusion and see our <a href="#">current demographic data</a>.</p>
+      </div>
 
-At GitHub we build tools that make collaborating and writing software easier for everyone. We've built a company we truly love working for, and we think you will too.
-
-
-Open positions
-Apprenticeships
-Internships
-
-
-[Image https://via.placeholder.com/100]
-A diverse and inclusive workplace
-
-At GitHub, we think that a diverse company is a strong company, and we work hard to foster a supportive and welcoming workplace. Learn more about our commitment to diversity and inclusion and see our current demographic data.
-
-
-[Image https://via.placeholder.com/100]
-Work happier
-
-Build amazing things with autonomy, self-direction, and a healthy work-life balance. We offer flexible work schedules for all of our employees and unlimited PTO. We also believe that if a job allows for it, you should work wherever you're happiest.
-
+      <div class="container2">
+        <img src="https://via.placeholder.com/100" alt="Picture of Earth with comment bubbles around it.">
+        <h2>Work happier</h2>
+        <p>Build amazing things with autonomy, self-direction, and a healthy work-life balance. We offer flexible work schedules for all of our employees and unlimited PTO. We also believe that if a job allows for it, you should <a href="#">work wherever you're happiest</a>.</p>
+    </div>
+  </body>
+</html>
