--- a/stevens-college/index.html
+++ b/stevens-college/index.html
@@ -1,14 +1,24 @@
-<!-- Markup this content with HTML here -->
-[Page Title: Computer Software Engineering Technology]
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Computer Software Engineering Technology</title>
+     <link rel="stylesheet" href="styles.css"/>
+  </head>
+  <body>
+    <header>
+      <h1>COMPUTER SOFTWARE ENGINEERING TECHNOLOGY</h1>
+    </header>
 
+    <img src="https://via.placeholder.com/500x300" alt="Picture of unfinished jigsaw puzzle on table.">
 
-Computer Software Engineering Technology
+    <ul>
+      <li>SCHEDULE</li>
+      <li>FACULTY</li>
+      <li>TOOL LIST</li>
+    </ul>
 
-[Image https://via.placeholder.com/500x300]
+    <p>Computers have become a major factor in the development and operation of the modern industry. From providing means of communications, to operating machines, to facilitating international commerce, to systems animation, computers and their related software programs makes things possible.</p>
 
-Schedule
-Faculty
-Tool List
-
-Computers have become a major factor in the development and operation of the modern industry. From providing means of communications, to operating machines, to facilitating international commerce, to systems animation, computers and their related software programs makes things possible.
-
+  </body>
+</html>
