--- a/airbnb/index.html
+++ b/airbnb/index.html
@@ -15,13 +15,13 @@
       <p>Anywhere</p>
 
       <div class="container2">
-        <h2>CHECK IN</h2>
-        <h2>CHECK OUT</h2>
+        <h2 class="head2">CHECK IN</h2>
+        <h2 class="head2">CHECK OUT</h2>
       </div>
 
-      <div class="container3"  
-        <p>mm/dd/yyyy</p>
-        <p>mm/dd/yyyy</p>
+      <div class="container3">
+        <p class="date">mm/dd/yyyy</p>
+        <p class="date">mm/dd/yyyy</p>
       </div>
 
       <h2>GUESTS</h2>
@@ -31,9 +31,18 @@
 
       <h3>Explore Airbnb</h3>
       <ul>
-        <li>Homes</li>
-        <li>Experiences</li>
-        <li>Restaurants</li>
+        <div class="list">
+          <img src="https://via.placeholder.com/70x60" alt="Picture of a bedroom.">
+          <li>Homes</li>
+        </div>
+        <div class="list">
+          <img src="https://via.placeholder.com/70x60" alt="Picture of three people riding bike.">
+          <li>Experiences</li>
+        </div>
+        <div class="list">
+          <img src="https://via.placeholder.com/70x60" alt="Picture of food on a table.">
+          <li>Restaurants</li>
+        </div>
       </ul>
     </div>
   </body>
