--- a/amazon/index.html
+++ b/amazon/index.html
@@ -6,37 +6,54 @@
     <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    
+    <header>
+      <h1>Computer & Technology Books</h1>
+    <header>
+
+    <p>Browse a wide selection of <a href="#">programming guides</a>, <a href="#">Android resources</a>, and <a href="#">Java books</a>.</p>
+
+    <h2>Shop by category</h2>
+
+    <ul>
+      <div class="container">
+        <img src="https://via.placeholder.com/125x175" alt="Picture programming book.">
+        <li><a href="#">Programming</a></li>
+      </div>
+
+      <div class="container">
+        <img src="https://via.placeholder.com/125x175" alt="Picture of computer science book.">
+        <li><a href="#">Computer Science</a></li>
+      </div>
+
+      <div class="container">
+        <img src="https://via.placeholder.com/125x175" alt="Picture of programming Languages book.">
+        <li><a href="#">Programming Languages</a></li>
+      </div>
+
+      <div class="container">
+        <img src="https://via.placeholder.com/125x175" alt="Picture of networking and cloud computing book.">
+        <li><a href="#">Network & Cloud Computing</a></li>
+      </div>
+
+      <div class="container">
+        <img src="https://via.placeholder.com/125x175" alt="Picture of security and encryption book.">
+        <li><a href="#">Security & Encryption</a></li>
+      </div>
+
+      <div class="container">
+        <img src="https://via.placeholder.com/125x175" alt="Picture of software book.">
+        <li><a href="#">Software</a></li>
+      </div>
+
+      <div class="container">
+        <img src="https://via.placeholder.com/125x175" alt="Picture of operating systems book.">
+        <li><a href="#">Operating Systems</a></li>
+      </div>
+
+      <div class="container">
+        <img src="https://via.placeholder.com/125x175" alt="Picture of games and strategy guides book.">
+        <li><a href="#">Games & Strategy Guides</a></li>
+      </div>
+    </ul>
   </body>
 </html>
-
-Computer & Technology Books
-
-Browse a wide selection of programming guides, Android resources, and Java books.
-
-
-Shop by category
-
-[Image https://via.placeholder.com/125x175]
-Programming
-
-[Image https://via.placeholder.com/125x175]
-Computer Science
-
-[Image https://via.placeholder.com/125x175]
-Programming Languages
-
-[Image https://via.placeholder.com/125x175]
-Network & Cloud Computing
-
-[Image https://via.placeholder.com/125x175]
-Security & Encryption
-
-[Image https://via.placeholder.com/125x175]
-Software
-
-[Image https://via.placeholder.com/125x175]
-Operating Systems
-
-[Image https://via.placeholder.com/125x175]
-Games & Strategy Guides
