--- a/github/index.html
+++ b/github/index.html
@@ -11,23 +11,30 @@
       <p>At GitHub we build tools that make collaborating and writing software easier for everyone. We've built a company we truly love working for, and we think you will too.</p>
     </header>
 
-    <p class="click">
+    <p class="links">
       <a href="#">Open positions</a>
       <a href="#">Apprenticeships</a>
       <a href="#">Internships</a>
     </p>
 
-    <div class="container-both">
-      <div class="container1">
+    <ul>
+      <div class="container">
         <img src="https://via.placeholder.com/100" alt="Picture of three hands doing the peace sign, thumbs up, and pointing.">
+      </div>
+
+      <div class="container">
         <h2>A diverse and inclusive workplace</h2>
         <p>At GitHub, we think that a diverse company is a strong company, and we work hard to foster a supportive and welcoming workplace. Learn more about our commitment to diversity and inclusion and see our <a href="#">current demographic data</a>.</p>
       </div>
 
-      <div class="container2">
-        <img src="https://via.placeholder.com/100" alt="Picture of Earth with comment bubbles around it.">
-        <h2>Work happier</h2>
-        <p>Build amazing things with autonomy, self-direction, and a healthy work-life balance. We offer flexible work schedules for all of our employees and unlimited PTO. We also believe that if a job allows for it, you should <a href="#">work wherever you're happiest</a>.</p>
-    </div>
+      <div class="container">
+        <img src="https://via.placeholder.com/100" alt="Picture of three hands doing the peace sign, thumbs up, and pointing.">
+      </div>
+
+      <div class="container">
+        <h2>A diverse and inclusive workplace</h2>
+        <p>At GitHub, we think that a diverse company is a strong company, and we work hard to foster a supportive and welcoming workplace. Learn more about our commitment to diversity and inclusion and see our <a href="#">current demographic data</a>.</p>
+      </div>
+    </ul>
   </body>
 </html>
